Made mobile friendly

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
     <meta charset="UTF-8">
@@ -20,7 +21,7 @@
     <div class="box">
         <div class="image">
             <picture>
-                <source srcset="./assets/images/image-header-mobile.jpg" media="(max-width: 375px)">
+                <source srcset="./assets/images/image-header-mobile.jpg" media="(max-width: 400px)">
                 <source srcset="./assets/images/image-header-desktop.jpg">
                 <img src="./assets/images/image-header-desktop.jpg" alt="talks" style="width:auto">
             </picture>
